turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:4: error: not found: value setCouleurSol
	if(setCouleurSol()==colors(i)){
           ^LangtonsAnt:5: error: object java.awt.Color is not a value
		setCouleurBrosse(Color(i))
                                 ^